public/stylesheets/style.styl
/*
  Global
*/
@import url('https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro')
/*
  Fonts
*/
@font-face
  font-family BattalionMono
  src url(/fonts/BattalionMono-Regular.woff) format('woff'),
      url(/fonts/BattalionMono-Regular.woff2) format('woff2'),
      url(/fonts/BattalionMono-Regular.eot) format('eot')
*
  box-sizing border-box
  -moz-box-sizing border-box
  -webkit-box-sizing border-box
*:focus
  outline none
html
  color #eee
  background-color #212121
  min-width 250px
body
  line-height 150%
  font-size 1em
  font-family 'Source Sans Pro', 'Open Sans', sans-serif

::selection
  background #FF9933
::-moz-selection
  background #FF9933

::-webkit-input-placeholder
  text-align center
h1, h2, h3, h4, h5, h6
  font-family BattalionMono
  line-height 1em
  padding-bottom 0
h1.responsive-text
  font-size: 5vh
a:link, a:visited, a:active
  color #eee
  text-decoration none
a:hover
  color #F93
  -o-transition .2s
  -ms-transition .2s
  -moz-transition .2s
  -webkit-slide-transition .2s
  transition .2s
// Outbound Links
a.outbound
  padding-left 10px
  background-color #000000
a.outbound:after
  content '↗'
  font-size 50%
  position relative
  opacity 0
  left -1em
  -webkit-transition all 250ms
  transition all 250ms
  //margin-left -5px
a.outbound:hover:after
  opacity 1
  left 0
  color #F93
  -o-transition .2s
  -ms-transition .2s
  -moz-transition .2s
  -webkit-transition .2s
  transition .2s
button
  width 50px
  height 30px
  color #eee
  background-color green
  border none
/*
  Login
*/
.login-content
  grid-column-start 2
  grid-column-end 2
  grid-row-start 1
  grid-row-end 1
  width 50%
  padding-bottom 15px
  margin 0 auto
  text-align center
.login-field
  padding 10px 0 0 0
.login-field input
  height 25px
  margin 0 auto
  background-color black
  border #eee solid 1px
  border-radius 0
.login-actions
  height 25px
  padding 10px
.login-actions input
  height 25px
  margin 0 auto
  text-align center

/*
  Navigation
*/
.nav
  display grid
  grid-template-columns 10px auto 10px
  grid-template-rows 75px
  @media only screen and (min-width: 600px)
    display grid
    grid-template-columns 280px auto 280px
    grid-template-rows 75px
    color #fff
    text-decoration none
    li
      float left
      list-style-type none
    width 100%
    height 75px
    position relative
    background #212121
    line-height normal
    text-align center
.nav-list
  display none
  @media only screen and (min-width: 600px)
    display block
    grid-column-start 3
    grid-column-end 3
    grid-row-start 1
    grid-row-end 1
    justify-self right
    align-self center
.nav-list-dropdown
  display none
  position absolute
  min-width 160px
  padding 5px 10px
  z-index 5
.nav-item
  padding-right 10px
  li
    width auto
  //display none
.logo
  grid-column 2
  grid-row 1
  width 75px
  justify-self center
  align-self center
.webring
  height 25px
  margin-top -3px
a:hover .webring
  filter invert(.5) sepia(1) saturate(5)
  -o-transition .2s
  -ms-transition .2s
  -moz-transition .2s
  -webkit-transition .2s
  transition .2s

/*
  Site Layout
*/
.grid
  display grid
  grid-template-columns 20px auto 20px
  grid-template-rows auto auto 40px
  width 100%
  padding 0 5%
  @media only screen and (max-width:600px)
    grid-template-columns 2px auto 2px
    grid-template-rows auto auto 40px

.content
  width 100%
  grid-column 2
  grid-row 1
  justify-self center
  align-self center

/*
  Wiki
*/
.wiki-header
  img
    width 20vw
    display block
    margin 0 auto
    @media only screen and (max-width:600px)
      width 50vw
ul.catagories
  display flex
  flex-wrap wrap
  //max-width 65vw
  padding 0
  //margin 0 -10px
  justify-content space-evenly
  list-style-type none
  text-align center
  @media only screen and (max-width:600px)
    max-width 600px
li.wiki-item
  width 150px
  margin 0 10px
  margin-bottom 10px
  a
  display block
  padding 5px
  img
    display block
    width 100px
    margin 20px 20px
    float left
span.wiki-label
  display block
span.wiki-desc
  display block
  font-size 85%

// Project Status 
.wiki-project-status
  display grid
  grid-template-columns 5px auto 5px
  grid-template-rows 25px
  width 40%
  max-width 650px
  min-width 350px
  margin 0 0 0 auto
  height 25px
  color #212121
  background-color #f9f9f0
  font-size 1em
  a:link, a:visited
    color #DD7414
  a:hover, a:hover:after
    color #01525D
  @media only screen and (max-width: 600px)
    width 100%
ul.w-p-s-list
  grid-column 2
  display flex
  flex-wrap wrap
  align-self center
  justify-content space-evenly
  list-style-type none
  margin 0
  padding 0
li.w-p-s-item
  width 110px
  line-height 150%
  margin 0
  text-align center
  

/*
  Blog · Post Viewer
*/

/*
  Blog · Post Editor
*/
.post-editor
  width 100%
  grid-column-start 2
  grid-column-end 2
  grid-row-start 1
  grid-row-end 1
  justify-self center
  align-self center
.post-title-field
  padding 10px
  input
    color #c8c1a9
    background-color #212121
    border 0
    width 100%
    height 3em
    font-size 22px
    text-align center
    ::placeholder
      text-align center
      opacity 1
      font-size 24px
.post-content-field
  padding 10px
  textarea
    color #c8c1a9
    background-color #212121
    //border 1px solid #2e2e2e
    border 0
    height 30em
    width 100%
    font-size 16px
    ::placeholder
      text-align center
      opacity 1

/*
  About
*/
.about
  grid-column 2
  grid-row 2
  align-self center
  justify-self center
  h1
    text-align center
.social
  width 100%
  border-radius 10px
  background #111111
  padding 5px 10px


.avatar
  padding 24px
  grid-column 2
  grid-row 1
  justify-self center
  align-self center
  img
    display inline-block
    border-radius 230px 48px 230px 48px
    border 0px solid white
    width 35vw
    margin 0 auto
    -webkit-filter grayscale(70%)
    filter grayscale(70%)
    -o-transition .2s
    -ms-transition .2s
    -moz-transition .2s
    -webkit-transition .2s
    transition .2s
  img:hover
    border-radius 48px 230px 48px 230px
    -webkit-filter grayscale(0%)
    filter grayscale(0%)
    -o-transition .2s
    -ms-transition .2s
    -moz-transition .2s
    -webkit-transition .2s
    transition .2s
  @media only screen and (max-width: 1000px)
    img
      width 50vw
  @media only screen and (max-width: 600px)
    img
      width 70vw
/*
  Footer
*/
footer
  display grid
  grid-template-columns 100px auto 100px
  grid-template-rows 50px
  width 100%
  padding-top 10px
  padding-bottom 10px
  color #999999
  //background-color #292F33
  text-align center
  float left
  a:link,a:active, a:hover, a:visited
    color #999999
.footer-misc
  grid-column-start 2
  grid-column-end 2
  grid-row-start 1
  grid-row-end 1
  justify-self center
  align-self center

